Adding All Arquitecture to Filter User and App User Bets
